# SourceSage

./: .SourceSageignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  RELEASE_NOTES.md  SECURITY.md  SKILL.md  SourceSage.md  SourceSage.py  conda_activate_ss_test.bat  get_git_log.py  pyproject.toml  requirements.txt  setup.py  sourcesage.yml  test_results.txt
.aira/: config.dev.commit.yml  config.dev.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish-to-pypi.yml  release-to-x.yml  (+1 more)
SourceSageAssets/: README.md
SourceSageAssetsDemo/: STAGED_DIFF.md  SourceSage.md
agents/: openai.yaml
config/: .SourceSageignore  constants.py
demo/: get_diff.py  get_issues.py
development/: AGENT_MODE_DEVELOPMENT_PLAN.md
docs/: .sourcesage_releasenotes.yml  AGENT_MODE_TEST_REPORT.md  COMMITCRAFT.md  DOCUMIND.md  EXPERIMENTAL_FEATURES.md  ISSUEWISE.md  SourceSage.md  Stage2CMsg.md  TEST_REPORT.html  USAGE.md  index.md  package-lock.json  package.json  timeline_sample.md
example/: README.md  Repository_summary.md  generate_diff_report.py  make_issue_res.py
modules/: ChangelogGenerator.py  ChangelogUtils.py  DiffChangelogGenerator.py  EnvFileHandler.py  GitHubIssueRetrieve.py  IssuesToMarkdown.py  StageInfoGenerator.py  StagedDiffGenerator.py  file_utils.py  main.py  markdown_utils.py  source_sage.py
script/: activate-sourcesage_dev.bat  build.bat  build.sh  build_and_release.bat
sourcesage/: __init__.py  cli.py  core.py  logging_utils.py
temp/: sourcesage.yml
tests/: README.ja.md  README.md  conftest.py  test_cli.py  test_docusum_markdown_structure.py  test_e2e.py  test_git_info.py  test_language_and_ignore.py  test_sourcesage.py
(+104 files in other folders)
